# PlausiDen-Firewall

./: .composition-baseline.json  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
src/: anomaly_detector.rs  app_fingerprint.rs  application_identity.rs  arp_monitor.rs  bandwidth.rs  blacklist_sync.rs  connection_limit.rs  conntrack.rs  dns_cache.rs  dns_filter.rs  dns_over_https.rs  dns_pinning.rs  dns_query_log.rs  dns_sinkhole.rs  dns_tunnel.rs  doh_monitor.rs  dpi.rs  ebpf.rs  egress.rs  geo_block.rs  geo_ip.rs  geo_routing.rs  http_mime_filter.rs  icmp_filter.rs  icmp_rate_limit.rs  ip_reputation.rs  ipv6_filter.rs  lib.rs  monitor.rs  nat_helper.rs  network_zones.rs  nftables.rs  nftables_state.rs  packet_log.rs  payload_inspector.rs  port_knock.rs  port_scan_detector.rs  protocol_anomaly.rs  protocol_filter.rs  proxy_detect.rs  (+13 more)
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration.rs
