[package]
name = "plausiden-firewall"
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
description = "Application-aware firewall with DPI, egress filtering, DNS sinkholing"
repository = "https://github.com/thepictishbeast/PlausiDen-Firewall"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
md5 = "0.7"

[dev-dependencies]
tempfile = "3"
